# gb-menu-scrape

./: README.md  pyproject.toml  scrape.py
output/: burger-king-plaza-low-yat-delivery.csv  kfc-berjaya-times-square-delivery.csv
