[tool.poetry]
name = "grab-scrape"
version = "0.1.0"
description = "Simple scraper to scrape menu item prices from Grab"
authors = ["Reo Neo <reoneo97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
pandas = "^1.4.3"
click = "^8.1.3"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
